0031364: Foundation Classes - unused enumerations in GeomAbs package

Files GeomAbs_CurveForm.hxx, GeomAbs_SurfaceForm.hxx, GeomAbs_UVSense.hxx are removed