src/ShapeAnalysis/ShapeAnalysis_Surface.cxx
@@ -44,7 +44,6 @@
 #include <Geom_SurfaceOfLinearExtrusion.hxx>
 #include <Geom_SurfaceOfRevolution.hxx>
 #include <Geom_ToroidalSurface.hxx>
-#include <GeomAbs_SurfaceForm.hxx>
 #include <GeomAdaptor_Curve.hxx>
 #include <GeomAdaptor_HSurface.hxx>
 #include <gp_Pnt.hxx>
